--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,15 @@
 ---
-name: Tails Azimuth
+name: Mochammad Rifky Satria Perdana
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+occupation: Infrastructure Engineer
+company: CSG International
+email: rifky.satriaperdana@gmail.com
+linkedin: https://www.linkedin.com/in/mochammadrifky/
+github: https://github.com/morifky
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+I'm a Site Reliability Engineer with a strong focus on cloud infrastructure, automation, and system reliability. Over the past 5+ years, I’ve specialized in designing and operating scalable infrastructure — primarily on Amazon Web Services (AWS) — to support high-availability applications.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+My core strength lies in building infrastructure systems that are reliable, observable, and easy to operate. I believe in treating infrastructure as code and automate everything from provisioning to deployment pipelines using tools like Terraform and modern CI/CD platforms.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+While infrastructure is my main playground, I also had software engineering background. This gives me the flexibility to dive into application-level debugging and bridge the gap between development and operations.
