update project history

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,8 +8,11 @@ linkedin: https://www.linkedin.com/in/mochammadrifky/
 github: https://github.com/morifky
 ---
 
-I'm a Site Reliability Engineer with a strong focus on cloud infrastructure, automation, and system reliability. Over the past 5+ years, I’ve specialized in designing and operating scalable infrastructure — primarily on Amazon Web Services (AWS) — to support high-availability applications.
+Infrastructure engineer with over 5 years of experience designing, building, and maintaining scalable IT infrastructure on
+AWS.
 
-My core strength lies in building infrastructure systems that are reliable, observable, and easy to operate. I believe in treating infrastructure as code and automate everything from provisioning to deployment pipelines using tools like Terraform and modern CI/CD platforms.
+Mostly focused on making sure things run smoothly in the cloud — reliable, efficient, and not a pain to manage.
 
-While infrastructure is my main playground, I also had software engineering background. This gives me the flexibility to dive into application-level debugging and bridge the gap between development and operations.
+I can code (somewhat). Have done a few gig jobs in the past using Nest.js, React, and PostgreSQL.
+
+Big fan of solid infra and clean setups. I also drop some personal notes here from time to time — maybe they'll be useful to someone.
