--- a/data/blog/AWS VPC with custom DHCP.mdx
+++ b/data/blog/AWS VPC with custom DHCP.mdx
@@ -44,7 +44,7 @@ The straightforward solution? Use Route53 VPC associations.
 But here’s the catch:
 
 the customer’s environment we managed was using a custom DHCP options set.
-That meant every DNS lookup request from our applications was forwarded to our company’s internal DNS server — not AWS’s Route53 resolver.
+That meant every DNS lookup request from the applications was forwarded to our company’s internal DNS server — not AWS’s Route53 resolver.
 
 ## AWS Reserved DNS Servers
 
